--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,17 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
               }
             ],
             "styles": [
+              {
+                "input": "./node_modules/leaflet/dist/leaflet.css"
+             },
               {
                 "input": "src/theme/variables.scss"
               },
