--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
     "@types/leaflet": "^1.5.12",
     "@types/leaflet.markercluster": "^1.4.2",
     "cordova-plugin-geolocation": "^4.0.2",
