--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-geolocation": "^4.0.2",
     "core-js": "^2.5.4",
     "leaflet": "^1.6.0",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet.markercluster": "^1.4.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -44,6 +45,7 @@
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet-routing-machine": "^3.2.1",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
